--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     </head>
 
     <body>
-        <div id='main' class="container"></div>
+        <div id="everythingBelowHeader" class="container">
+            <div id="sidebar" class="border border-info p-3" style="margin: auto"></div>
+            <div id='main'></div>
+        </div>
+        
         <script src="assets/javascript/trivia.js" async defer></script>
     </body>
 </html>
