Meets all requirements per homework specifications

--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-light bg-info">
-        <a class="navbar-brand text-light" href="#">Photography Trivia</a>
+        <a class="navbar-brand text-light" href="#"><i class="fas fa-camera-retro fa-2x mr-3"></i><span style="font-size: 40px">Photography Trivia</span></a>
     </nav>
     <div id="everythingBelowHeader" class="container" style="display: flex; justify-content: center">
-        <div class="col-3 m-3 pl-3">
+        <!-- <div id='main' class="col-9 m-3 p-3"></div>
+        <div id="watchAndInfo" class="col-3 m-3 pl-3">
             <div id="watchface" class="row mt-4 mb-3"></div>
             <div id="infoPanel" class="row"></div>
-        </div>
-        <div id='main' class="col-9 m-3 p-3"></div>
+        </div> -->
     </div>
 
     <script src="assets/javascript/trivia.js" async defer></script>
