--- a/index.html
+++ b/index.html
@@ -18,16 +18,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-info">
-        <a class="navbar-brand text-light" href="#"><i class="fas fa-camera-retro fa-2x mr-3"></i><span style="font-size: 40px">Photography Trivia</span></a>
-    </nav>
-    <div id="everythingBelowHeader" class="container" style="display: flex; justify-content: center">
-        <!-- <div id='main' class="col-9 m-3 p-3"></div>
-        <div id="watchAndInfo" class="col-3 m-3 pl-3">
-            <div id="watchface" class="row mt-4 mb-3"></div>
-            <div id="infoPanel" class="row"></div>
-        </div> -->
-    </div>
+    <a class="navbar-brand text-info" href="#"><i class="fas fa-camera-retro fa-2x ml-3 mr-3"></i><span style="font-size: 40px">Photography Trivia</span></a>
+    <div style="height: 70px; background-image: url('https://upload.wikimedia.org/wikipedia/commons/9/9d/Contax-s.jpg')"></div>
+    <div id="everythingBelowHeader" class="container" style="display: flex; justify-content: center"></div>
 
     <script src="assets/javascript/trivia.js" async defer></script>
 </body>
