Implemented randomization of questions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <a class="navbar-brand text-info" href="#"><i class="fas fa-camera-retro fa-2x ml-3 mr-3"></i><span style="font-size: 40px">Photography Trivia</span></a>
     <div style="height: 70px; background-image: url('https://upload.wikimedia.org/wikipedia/commons/9/9d/Contax-s.jpg')"></div>
-    <div id="everythingBelowHeader" class="container" style="display: flex; justify-content: center"></div>
+    <div id="everythingBelowHeader" class="row"></div>
 
     <script src="assets/javascript/trivia.js" async defer></script>
 </body>
